; ModuleID = '/home/carl/AnghaBench/h2o/src/extr_ssl.c_dispose_keyset.c'
source_filename = "/home/carl/AnghaBench/h2o/src/extr_ssl.c_dispose_keyset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_quic_keyset_t = type { %struct.TYPE_2__, i32* }
%struct.TYPE_2__ = type { i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.st_quic_keyset_t*)* @dispose_keyset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dispose_keyset(%struct.st_quic_keyset_t* %0) #0 {
  %2 = alloca %struct.st_quic_keyset_t*, align 8
  store %struct.st_quic_keyset_t* %0, %struct.st_quic_keyset_t** %2, align 8
  %3 = load %struct.st_quic_keyset_t*, %struct.st_quic_keyset_t** %2, align 8
  %4 = getelementptr inbounds %struct.st_quic_keyset_t, %struct.st_quic_keyset_t* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @quicly_free_default_cid_encryptor(i32* %5)
  %7 = load %struct.st_quic_keyset_t*, %struct.st_quic_keyset_t** %2, align 8
  %8 = getelementptr inbounds %struct.st_quic_keyset_t, %struct.st_quic_keyset_t* %7, i32 0, i32 1
  store i32* null, i32** %8, align 8
  %9 = load %struct.st_quic_keyset_t*, %struct.st_quic_keyset_t** %2, align 8
  %10 = getelementptr inbounds %struct.st_quic_keyset_t, %struct.st_quic_keyset_t* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  %12 = load i32*, i32** %11, align 8
  %13 = call i32 @ptls_aead_free(i32* %12)
  %14 = load %struct.st_quic_keyset_t*, %struct.st_quic_keyset_t** %2, align 8
  %15 = getelementptr inbounds %struct.st_quic_keyset_t, %struct.st_quic_keyset_t* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  store i32* null, i32** %16, align 8
  %17 = load %struct.st_quic_keyset_t*, %struct.st_quic_keyset_t** %2, align 8
  %18 = getelementptr inbounds %struct.st_quic_keyset_t, %struct.st_quic_keyset_t* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = call i32 @ptls_aead_free(i32* %20)
  %22 = load %struct.st_quic_keyset_t*, %struct.st_quic_keyset_t** %2, align 8
  %23 = getelementptr inbounds %struct.st_quic_keyset_t, %struct.st_quic_keyset_t* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  store i32* null, i32** %24, align 8
  ret void
}

declare dso_local i32 @quicly_free_default_cid_encryptor(i32*) #1

declare dso_local i32 @ptls_aead_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
